2010-11-19  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Andreas Kling.

        https://bugs.webkit.org/show_bug.cgi?id=49200
        [Qt] bugs in Composition mode for QWebPage::inputMethodEvent & inputMethodQuery()

        Make QWebPage work as following when editor is in composition mode:
        1. anchor position and cursor position are the same and always >= 0
        2. current selection is always null

        * Api/qwebpage.cpp:
        (QWebPagePrivate::inputMethodEvent):
        (QWebPage::inputMethodQuery):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods):

2010-11-18  Gavin Barraclough  <barraclough@apple.com>

        Build fix - update error messages folllowing r72360.

        * tests/qwebframe/tst_qwebframe.cpp:

2010-11-12  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Andreas Kling.

        [Qt] Static platform plugin support
        https://bugs.webkit.org/show_bug.cgi?id=49470

        Adding support for statically linked platform plugins.

        * WebCoreSupport/QtPlatformPlugin.cpp:
        (WebCore::QtPlatformPlugin::loadStaticallyLinkedPlugin):
        (WebCore::QtPlatformPlugin::plugin):
        * WebCoreSupport/QtPlatformPlugin.h:

2010-11-17  Andreas Kling  <kling@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        Reuse the size of the actualVisibleContentRect when loading a new page
        or navigating session history.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::transitionToCommittedForNewPage):

2010-11-17  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        Converge means of querying a parent node into one way, which is Node::parentNode.
        https://bugs.webkit.org/show_bug.cgi?id=49686

        * Api/qwebelement.cpp:
        (QWebElement::prependOutside): Changed to use parentNode.
        (QWebElement::appendOutside): Ditto.